--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Beers#index</h1>
-<p>Find me in app/views/beers/index.html.erb</p>
+<#%= @beers.each do |beer| %>
+<!-- <h3><#%= beer.name %> ABV: <#%= beer.abv %>%</h3>
+<p>How to make it: <#%= beer.recipe.description || "" %></p>
+<p>ingredients</p>
+
+<#% beer.hops.each do |hop| %>
+<p>hops: <#%= hop.name %></p>
+<#% end %>
+
+<#% beer.malts.each do |malt| %>
+<p>malts: <#%= malt.name %></p>
+<#% end %>
+ -->
+<#% end %>
