--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,2 +1,7 @@
+<%= render partial: "components/navbar" %>
+
+
 <h1>Breweries#show</h1>
 <p>Find me in app/views/breweries/show.html.erb</p>
+
+<%= render partial: "components/footer" %>
