--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,8 +1,5 @@
-<% @breweries.each do |brewery| %>
-<%= brewery.name %>
-<% brewery.beers.each do |beer| %>
-  <%= link_to beer_path(beer) do%>
-  <p><%= beer.name %></p>
-  <% end %>
-  <% end %>
-<% end %>
+<%= render partial: "components/navbar" %>
+
+<%= render partial: "components/brewery", collection: @breweries %>
+
+<%= render partial: "components/footer" %>
