updated some views and made it more succinct by using partials

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,7 @@
 <%= render partial: "components/navbar" %>
 
-<%= render partial: "components/beer", collection: @beers %>
+<div class="cards">
+  <%= render partial: "components/beer", collection: @beers %>
+</div>
 
 <%= render partial: "components/footer" %>
