--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,7 @@
 <%= render partial: "components/navbar" %>
 
-<%= render partial: "components/brewery", collection: @breweries %>
+<div class="cards">
+  <%= render partial: "components/brewery", collection: @breweries %>
+</div>
 
 <%= render partial: "components/footer" %>
