--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "components/navbar" %>
 
+<h1 class="brewery-name"><%= @brewery.name %></h1>
 
-<h1>Breweries#show</h1>
-<p>Find me in app/views/breweries/show.html.erb</p>
+<div id="map" class="mt-5 row justify-content-center" style="height: 600px; width: 100%"></div>
 
 <%= render partial: "components/footer" %>
