--- a/app/views/components/_brewery.html.erb
+++ b/app/views/components/_brewery.html.erb
@@ -8,7 +8,6 @@
       <li><%= beer.name %></li>
       <% end %>
     </ul>
-    <%= link_to "Details", brewery_path(brewery), class: "btn btn-primary"  %>
-    <!-- <a href="" class="btn btn-primary">Details</a> -->
+    <%= link_to "Details", brewery_path(brewery), class: "btn btn-dark detail-btn"  %>
   </div>
 </div>
