--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>Beerpedia</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
